[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pokete"
authors = [{ name = "lxgr", email = "lxgr@protonmail.com" }]
description = "A terminal based Pokemon like game"
keywords = ["game", "Ascii"]
version = "0.10.0-rc3"
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["scrap_engine>=1.4.3"]

[project.scripts]
pokete = "pokete.__main__:main"
pokete-util = "pokete.util.__main__:main"

[tool.setuptools.package-data]
"*" = ["*.mp3", "*.so", "*.dll"]

[project.urls]
Homepage = "https://github.com/lxgr-linux/pokete"
Issues = "https://github.com/lxgr-linux/pokete/issue"
Repository = "https://github.com/lxgr-linux/pokete.git"
